# veqtor-mcp

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  INSPECT_DOCUMENT_V0.3.md  KNOWN_LIMITATIONS.md  NOTICE  POST-V0.1-BACKLOG.md  README.md  RELEASING.md  ROADMAP.md  ROUND_MAP_V0.3.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.agents/skills/code-orchestrator/: SKILL.md
.github/: dependabot.yml
.github/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.3.0.md
.github/scripts/: promote_release.py  verify_published_pypi.py  verify_published_release.py  verify_release_attempt.py
.github/workflows/: ci.yml  codeql.yml  release.yml  website.yml
packaging/mcpb/: README.md  manifest.json
packaging/mcpb/demo/: FIRST_PROMPT.txt  README.md
scripts/: build_mcpb.py  check_acceptance_evidence.py  check_mcpb_artifact.py  check_release_artifacts.py  check_reproducible_build.py  check_reproducible_mcpb.py  installed_wheel_smoke.py  mcpb_stdio_smoke.py  release_contract.py
src/veqtor_docx/: __init__.py  _ooxml.py  apply.py  contracts.py  extract.py  inspect.py  rounds.py  synthetic.py  verify.py
src/veqtor_mcp/: __init__.py  _inspection_live.py  contracts.py  records.py  round_map.py  round_map_contract.py  server.py
tests/: conftest.py  test_acceptance_evidence.py  test_apply.py  test_decision_records.py  test_extract.py  test_inspect.py  test_mcp_server.py  test_mcpb_package.py  test_ooxml_mutation_boundary.py  test_private_dogfood.py  test_public_api_totality.py  test_published_pypi.py  test_published_release.py  test_release_artifacts.py  test_release_attempt.py  test_release_identity.py  test_release_promotion.py  test_release_workflow.py  test_reproducible_build.py  test_reproducible_mcpb.py  test_resource_limits.py  test_round_map.py  test_round_map_spec.py  test_rounds.py  test_scaffold.py  test_synthetic.py  test_verify.py  test_zip_security.py
tests/data/: README.md  decision-records-v1-compact-golden.json  decision-records-v1-golden.jsonl  round-map-v0.1.2-preflightless-apply-record.json
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/public/: _headers  _redirects  llms.txt  robots.txt  site.webmanifest
website/public/media/: veqtor-demo-v0.1.2-r2.en.vtt  veqtor-demo-v0.1.2.en.vtt
website/scripts/: check-copy.mjs  check-site.mjs  guide-data.test.mjs  render-inline.test.mjs  rendered-bridge.test.mjs  sitemap-lastmod.test.mjs  visual-contract.test.mjs
website/scripts/lib/: rendered-bridge.mjs
website/src/components/: Breadcrumbs.astro  Footer.astro  GuideCard.astro  Header.astro  Logo.astro  NarrativePage.astro  PageHero.astro  SiteCta.astro
website/src/data/: guides-source.json
website/src/layouts/: BaseLayout.astro
website/src/lib/: demo-video.ts  guides.ts  render-inline.d.mts  render-inline.mjs  sitemap-lastmod.mjs
website/src/pages/: 404.astro  ai-contract-review.astro  contract-redline-analysis.astro  demo.astro  docs.astro  docx-track-changes-review.astro  how-it-works.astro  index.astro  limitations.astro  privacy.astro  product.astro  security.astro  setup.astro  sitemap.xml.ts  terms.astro  veqtor-vs-claude-for-word.astro
website/src/pages/author/: ilya-shilov.astro
website/src/pages/guides/: [slug].astro  index.astro  search.astro
website/src/pages/guides/topics/: [topic].astro
website/src/styles/: global.css
