# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "veqtor-mcp"
version = "0.3.0"
description = "Local MCP server for verifiable DOCX redline history and fail-closed tracked-change edits"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [
  { name = "Ilya Shilov" }
]
maintainers = [
  { name = "Ilya Shilov" }
]
keywords = ["mcp", "docx", "redlining", "tracked-changes", "legal-tech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
  "Topic :: Text Processing",
]
dependencies = [
  "jsonschema>=4.20,<5",
  "lxml>=6.1,<7",
  "mcp>=1.23.0,<2",
]

[project.urls]
Homepage = "https://veqtor.pro"
Documentation = "https://veqtor.pro/docs"
Repository = "https://github.com/JohnDeer-ai/veqtor-mcp"
Issues = "https://github.com/JohnDeer-ai/veqtor-mcp/issues"
Changelog = "https://github.com/JohnDeer-ai/veqtor-mcp/blob/main/CHANGELOG.md"
Security = "https://github.com/JohnDeer-ai/veqtor-mcp/security/policy"

[project.optional-dependencies]
dev = [
  "pip-licenses>=5.0",
  "pytest>=8.0",
]

[project.scripts]
veqtor-mcp = "veqtor_mcp.server:main"
veqtor-demo-rounds = "veqtor_docx.synthetic:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = [
  "/src/veqtor_docx/__init__.py",
  "/src/veqtor_docx/_ooxml.py",
  "/src/veqtor_docx/apply.py",
  "/src/veqtor_docx/contracts.py",
  "/src/veqtor_docx/extract.py",
  "/src/veqtor_docx/inspect.py",
  "/src/veqtor_docx/rounds.py",
  "/src/veqtor_docx/synthetic.py",
  "/src/veqtor_docx/verify.py",
  "/src/veqtor_mcp/__init__.py",
  "/src/veqtor_mcp/_inspection_live.py",
  "/src/veqtor_mcp/contracts.py",
  "/src/veqtor_mcp/records.py",
  "/src/veqtor_mcp/round_map.py",
  "/src/veqtor_mcp/round_map_contract.py",
  "/src/veqtor_mcp/server.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "/API.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/INSPECT_DOCUMENT_V0.3.md",
  "/KNOWN_LIMITATIONS.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/RELEASING.md",
  "/ROUND_MAP_V0.3.md",
  "/ROADMAP.md",
  "/SECURITY.md",
  "/TRADEMARKS.md",
  "/pyproject.toml",
  "/src/veqtor_docx/__init__.py",
  "/src/veqtor_docx/_ooxml.py",
  "/src/veqtor_docx/apply.py",
  "/src/veqtor_docx/contracts.py",
  "/src/veqtor_docx/extract.py",
  "/src/veqtor_docx/inspect.py",
  "/src/veqtor_docx/rounds.py",
  "/src/veqtor_docx/synthetic.py",
  "/src/veqtor_docx/verify.py",
  "/src/veqtor_mcp/__init__.py",
  "/src/veqtor_mcp/_inspection_live.py",
  "/src/veqtor_mcp/contracts.py",
  "/src/veqtor_mcp/records.py",
  "/src/veqtor_mcp/round_map.py",
  "/src/veqtor_mcp/round_map_contract.py",
  "/src/veqtor_mcp/server.py",
]

[tool.hatch.build]
exclude = [
  "/.claude",
  "**/.DS_Store",
  "**/.veqtor",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "private: optional local structural checks against external DOCX corpora (needs VEQTOR_PRIVATE_FIXTURE_DIR)",
]
